########################
# Current Developments #
########################

(Work toward next release. Currently under development.)

ADDED:

CHANGED:

DEPRECATED:

REMOVED:

FIXED:

  * Fixed crash due to form values being specified multiple times

SECURITY:

DOCUMENTATION:


##################
# Version 19.0.0 #
##################

ADDED:

  * If cs_sole_course is set to a course's name, the root URL will now refer to
    that course directly (with no redirect)

  * Added additional arguments to the callback function for ajaxrequest in the
    default handler

  * The "pythoncode" question type now listens to the "csq_show_check" flag

  * Added the "download" and "filename" options to the "raw_response" handler
    to allow making the responses downloadable (thanks to Shen Shen)

  * <python> tags can now be exited using sys.exit(), with non-zero 'return
    codes' causing the output to be ignored (or with a string value, using that
    instead of the Python block's output

  * Additional information is now stored in the question_info logs

  * Added the ability for users to specify that they prefer light text on a
    dark background

  * Updates to the question info cache can now be avoided by setting
    cs_update_questions_cache = False

  * Added links to leave user settings pages, back to the most recent
    non-settings page viewed

CHANGED:

  * Suppressed some warnings coming from BeautifulSoup.

  * Changed default session duration to fourteen days instead of two

  * Changed location of lock files to (hopefully) prevent the size of the locks
    directory from growing out of control

  * Javascript files are now located at /js/ instead of /scripts/

  * <chapter>, <section>, <subsection>, and <subsubsection> tags have
    been replaced with <catsoop-chapter>, <catsoop-section>, etc; and a
    conversion script has been provided

  * Moved the default 'remote' Python sandbox and improved the error message
    when the sandbox is offline.
